# blog-andres

./: Makefile  pyproject.toml
andresdev/: manage.py
andresdev/andresdev/: wsgi.py
andresdev/andresdev/settings/: base.py  dev.py
andresdev/andresdev/templates/: base.html
andresdev/blog/migrations/: 0001_initial.py  0002_blogindexpage_body_blogindexpage_date_and_more.py  0003_alter_blogindexpage_date.py  0004_alter_blogindexpage_date.py  0005_alter_blogindexpage_date.py  0006_blogpage_remove_blogindexpage_body_and_more.py
andresdev/blog/models/: __init__.py  blog_index_page.py  blog_page.py
andresdev/home/migrations/: 0003_homepage_body.py
blog/blog/settings/: base.py  dev.py
